<resources>
    <string name="app_name">TaskManager</string>
    <string name="todo_title">Organizador de tareas</string>
    <string name="categories">Categorias</string>
    <string name="tasks">Tareas</string>
    <string name="dialog_add_task">Añade la tarea</string>
    <string name="dialog_add_task_button">Crear tarea</string>
    <string name="dialog_category_business">Negocios</string>
    <string name="dialog_category_personal">Personal</string>
    <string name="dialog_category_others">Otros</string>

</resources>