<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:orientation="vertical"
    android:layout_width="250dp"
    android:padding="16dp"
    android:background="@color/background_todo_app"
    android:layout_height="wrap_content">
    
    <EditText
        android:id="@+id/etTask"
        android:layout_width="match_parent"
        android:backgroundTint="@color/white"
        android:hint="@string/dialog_add_task"
        android:textColor="@color/white"
        android:textColorHint="@color/white"
        android:layout_height="wrap_content"/>

    <RadioGroup
        android:id="@+id/rgCategories"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <RadioButton
            android:id="@+id/rbBusines"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/dialog_category_business"
            android:checked="true"
            android:textColor="@color/white"
            app:buttonTint="@color/business_category"/>
        <RadioButton
            android:id="@+id/rbPersonal"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/dialog_category_personal"
            android:textColor="@color/white"
            app:buttonTint="@color/personal_category"/>
        <RadioButton
            android:id="@+id/rbOther"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/dialog_category_others"
            android:textColor="@color/white"
            app:buttonTint="@color/other_category"/>

    </RadioGroup>
    <Button
        android:id="@+id/btnAddTask"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/dialog_add_task_button"
        android:backgroundTint="@color/accent"/>

</LinearLayout>